update dependencies and use docker image eclipse-temurin:21-jre-alpine